--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: A newbie site
+title: MR NOOBIE
 PSN: misternoobie
 Steam: misternoobie1
 Battle.net: misternoobie 1466
 Youtube: https://www.youtube.com/user/reinventyourexit01
 #email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi there. Nothing awesome here. Just an experimental newbie website 
+  used for testing. More contents will be uploaded here in the near future. 
+  #Write an awesome description for your new site here. You can edit this
+  #line in _config.yml. It will appear in your document head meta (for
+  #Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://misternoobie.com" # the base hostname & protocol for your site
 twitter_username: none
